--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,38 +1,44 @@
 version: '3'
 services:
-  power-plants-app:
+  app:
     build:
       context: .
       dockerfile: Dockerfile
     volumes:
       - .:/app/
     ports:
-      - '3000:3000'
-    environment:
-      DATABASE_HOST: ${DATABASE_HOST}
-      DATABASE_PORT: ${DATABASE_PORT}
-      DATABASE_USER: ${DATABASE_USER}
-      DATABASE_PASSWORD: ${DATABASE_PASSWORD}
-      DATABASE_NAME: ${DATABASE_NAME}
+      - "4000:3000"
+    depends_on:
+      - db
+      - mongodb
     env_file:
       - .env
-    depends_on:
-      - power-plants-db
+    environment:
+      NODE_ENV: development
+      MONGODB_URI: mongodb://mongodb:27017/power_plants
     networks:
       - app-network
 
-  power-plants-db:
+  db:
     platform: linux/x86_64
     image: mysql:5.7
     environment:
-      MYSQL_ALLOW_EMPTY_PASSWORD: ${DATABASE_ALLOW_EMPTY_PASSWORD}
-      MYSQL_DATABASE: ${DATABASE_NAME}
-      MYSQL_ROOT_PASSWORD: ${DATABASE_ROOT_PASSWORD}
-      MYSQL_PASSWORD: ${DATABASE_PASSWORD}
+      MYSQL_ALLOW_EMPTY_PASSWORD: ${MYSQL_ALLOW_EMPTY_PASSWORD}
+      MYSQL_DATABASE: ${MYSQL_DB}
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      MYSQL_USER: ${MYSQL_USER}
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
     ports:
       - "3306:3306"
     networks:
       - app-network
+
+  mongodb:
+      image: mongo:4.4
+      ports:
+        - "27017:27017"
+      networks:
+        - app-network
 
 networks:
   app-network:
