--- a/package.json
+++ b/package.json
@@ -24,19 +24,27 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/mongoose": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/schedule": "^4.0.0",
     "@nestjs/typeorm": "^10.0.1",
+    "@types/mongoose": "^5.11.97",
+    "@types/multer": "^1.4.11",
     "axios": "^1.6.5",
     "cities": "^2.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "crypto": "^1.0.1",
+    "exceljs": "^4.4.0",
     "g": "^2.0.1",
     "module": "^1.2.5",
+    "mongoose": "^8.1.1",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "typeorm": "^0.3.19"
+    "typeorm": "^0.3.19",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
